# test-hugsqlx

./: Cargo.toml  test.sql
crates/test-hugsqlx-crate/: Cargo.toml
crates/test-hugsqlx-crate/src/: main.rs
